Fix image spacing: line-height:0px on img paragraph, reduce heading margin-top to 6px

--- a/ui/preview_styles.css
+++ b/ui/preview_styles.css
@@ -60,7 +60,7 @@ h3,
 h4,
 h5,
 h6 {
-    margin-top: 24px;
+    margin-top: 6px;
     margin-bottom: 16px;
     font-weight: 600;
     line-height: 1.25;
